fix modal z-index issue caused by jquery-UI

--- a/client/stylesheets/mobile.css
+++ b/client/stylesheets/mobile.css
@@ -451,6 +451,10 @@ color: #fff;
 
 }
 
+.modal-dialog{
+	z-index: 1045;
+}
+
 
 
 
